Fixed wrong padding.

--- a/src/index.scss
+++ b/src/index.scss
@@ -793,7 +793,7 @@ label {
 
 .all {
     .contrast-box-full {
-        padding: 4% 5%;
+        padding: 5% 4%;
     }
     .color-bar-outer {
         flex: 0 0 auto;
